...
        Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            MediumTitle(AppLocalizations.of(context)!.deadline),
            if (model.deadlineString != null)
              Padding(
                key: const ValueKey("deadline_date_switch"),
                padding: const EdgeInsets.only(top: 5),
                child: Text(
                  model.deadlineString!,
                  style: Theme.of(context).textTheme.labelSmall?.copyWith(
                        color: Theme.of(context).textTheme.displayLarge!.color,
                      ),
...
